    <https://github.com/jhy/jsoup/issues/1220>

  * Bugfix: Don't add spurious whitespace or newlines to HTML or text for inline tags.
    <https://github.com/jhy/jsoup/issues/1305>
    <https://github.com/jhy/jsoup/issues/731>

  * Bugfix: TextNode.outerHtml() wouldn't normalize correctly without a parent.
    <https://github.com/jhy/jsoup/issues/1309>

  * Various code hygiene updates.

**** Release 1.12.1 [2019-May-12]
  * Change: removed deprecated method to disable TLS cert checking Connection.validateTLSCertificates().

  * Change: some internal methods have been rearranged; if you extended any of the Jsoup internals you may need to make
    updates.

  * Improvement: documents now remember their parser, so when later manipulating them, the correct HTML or XML tree
    builder is reused, as are the parser settings like case preservation.
    <https://github.com/jhy/jsoup/issues/769>

  * Improvement: Jsoup now detects the character set of the input if specified in an XML Declaration, when using the
    HTML parser. Previously that only happened when the XML parser was specified.
    <https://github.com/jhy/jsoup/issues/1009>

  * Improvement: if the document's input character set does not support encoding, flip it to one that does.
    <https://github.com/jhy/jsoup/issues/1007>

  * Improvement: if a start tag is missing a > and a new tag is seen with a <, treat that as a new tag. (This differs
    from the HTML5 spec, which would make at attribute with a name beginning with <, but in practice this impacts too
    many pages.
    <https://github.com/jhy/jsoup/issues/797>

  * Improvement: performance tweaks when parsing start tags, data, tables.

  * Improvement: added Element.nextElementSiblings() and Element.previousElementSiblings()
    <https://github.com/jhy/jsoup/pull/1054>

  * Improvement: treat center tags as block tags.
    <https://github.com/jhy/jsoup/pull/1113>
